--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tiny World Government</title>
+  <title>Fake Unity Network</title>
   <script src="/_sdk/element_sdk.js"></script>
   <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P:wght@400&display=swap');
@@ -787,7 +787,7 @@
  <body>
   <div class="container">
    <header class="header">
-    <h1 class="title">TINY WORLD GOVERNMENT</h1>
+    <h1 class="title">Fake Unity Network</h1>
     <div class="nav-buttons"><a href="https://pump.fun" target="_blank" rel="noopener noreferrer" class="nav-btn">X</a> <a href="https://pump.fun" target="_blank" rel="noopener noreferrer" class="nav-btn">pump.fun</a>
     </div>
    </header>
@@ -900,7 +900,7 @@
    </main>
    <div class="events-log" id="eventsLog">
     <div>
-     Welcome to Tiny World Government! Click countries to manage global affairs...
+     Welcome to Fake Unity Network! Click countries to manage global affairs...
     </div>
    </div>
   </div>
@@ -1771,7 +1771,7 @@
 
         // Element SDK Configuration
         const defaultConfig = {
-            title_text: "TINY WORLD GOVERNMENT",
+            title_text: "Fake Unity Network",
             background_color: "#1a1a2e",
             accent_color: "#00ff41",
             button_color: "#ff0040",
